--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:8Q1Xjtx0HVXe7NEXA2kK1KUx+6QPn2VITyZvs3FOevQ=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mongodb
 DB_HOST=database
 DB_PORT=27017
-DB_DATABASE=storytell
+DB_DATABASE=StoryTell
 DB_USERNAME=root
 DB_PASSWORD=
 
