--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - 8000:8000
     volumes:
-      - .:/var/www
+      - .:/var/www/html
     depends_on:
       - database
   database:
@@ -22,4 +22,3 @@ services:
       - mongo_data:/data/db
 volumes:
   mongo_data:
-  
