--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "mongodb/mongodb": "^1.16"
+        "mongodb/mongodb": "^1.16",
+        "pbmedia/laravel-ffmpeg": "^8.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
