--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/passport": "^11.8",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "mongodb/laravel-mongodb": "^3.9",
         "mongodb/mongodb": "^1.16",
         "pbmedia/laravel-ffmpeg": "^8.3"
     },
